--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Climb</title>
         <!-- main css file -->
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <!-- font awesome  -->
-        <link rel="stylesheet" href="/css/all.min.css">
+        <link rel="stylesheet" href="css/all.min.css">
         <!-- render all elements normally -->
         <link rel="stylesheet" href="normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,14 +24,14 @@
         <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Sofia">
         <!--icon-->
-        <link rel="icon" href="/material/professional (1).png">
+        <link rel="icon" href="material/professional (1).png">
     </head>
     <body>
         <!-- start header -->
         <div class="navbar">
             <div class="header">
                 <div class="container">
-                    <img src="/material/professional (1).png" alt>
+                    <img src="material/professional (1).png" alt>
                     <h1 class="logo"><a href="index.html"> Climb</a></h1>
                     <div class="links">
                         <button class="menu" id="menu">☰</button>
@@ -135,7 +135,7 @@
                     <!-- col 3 -->
                     <div class="col">
                         <div class="image image-column">
-                            <img src="/material/services.jpg" alt>
+                            <img src="material/services.jpg" alt>
                         </div>
                     </div>
                 </div>
@@ -236,4 +236,5 @@
         <!--footer end-->
         <script src="main.js"></script>
     </body>
+
 </html>
