--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="portfolio-content">
                     <!--card 1-->
                     <div class="card">
-                        <img src="/material/1_suK-y6ddujvd3-_k62_yiw.png" alt>
+                        <img src="material/1_suK-y6ddujvd3-_k62_yiw.png" alt>
                         <div class="info">
                             <h3>Project Here</h3>
                             <p>My creative ability is very difficult to measure
@@ -160,7 +160,7 @@
                     </div>
                     <!--card 2-->
                     <div class="card">
-                        <img src="/material/images.jpg" alt>
+                        <img src="material/images.jpg" alt>
                         <div class="info">
                             <h3>Project Here</h3>
                             <p>My creative ability is very difficult to measure
@@ -171,7 +171,7 @@
                     <!--card3-->
                     <div class="card">
                         <img
-                            src="/material/d434f17c-free-portfolio-design-layout-template.jpg"
+                            src="material/d434f17c-free-portfolio-design-layout-template.jpg"
                             alt>
                         <div class="info">
                             <h3>Project Here</h3>
@@ -192,7 +192,7 @@
                 <p>Less is more work</p>
                 <div class="about-content">
                     <div class="image">
-                        <img src="/material/image.webp">
+                        <img src="material/image.webp">
                     </div>
                     <div class="text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing
@@ -238,3 +238,4 @@
     </body>
 
 </html>
+
